refactor：clean code